# rubric

./: .gitignore  README.md  data_architecture_summary.md  pyproject.toml  requirements.txt  run_micro_pilot.sh
configs/: api_budget_real.template.json  dashboard_real.template.json  dashboard_smoke.example.json  data_sources_real.template.json  downstream_rlvr_commands.example.json  evidence_matrix_real.template.json  evidence_matrix_smoke.example.json  evidence_minimal_claim.generated.json  experiment_manifest.example.json  generators.example.jsonl  generators_minimal.example.jsonl  generators_reward_ablation.example.jsonl  judge_scorer.example.jsonl  llamafactory_sft.example.yaml  manifest_data_real.generated.json  manifest_data_researchrubrics.generated.json  manifest_data_rubricbench.generated.json  manifest_matrix_generalization.generated.json  manifest_matrix_judgebench.generated.json  manifest_matrix_real.generated.json  manifest_matrix_rewardbench2.generated.json  manifest_matrix_smoke.generated.json  manifest_minimal_claim.generated.json  manifest_real_run.generated.json  manifest_sft_data_real.template.json  methods_matrix_generalization.template.json  methods_matrix_judgebench.template.json  methods_matrix_real.template.json  methods_matrix_rewardbench2.template.json  methods_matrix_smoke.example.json  minimal_claim_real.template.json  pipeline_bootstrap_ci_smoke.example.json  pipeline_dashboard_smoke.example.json  pipeline_data_real.generated.json  pipeline_data_researchrubrics.generated.json  pipeline_data_rubricbench.generated.json  (+30 more)
examples/: toy_bsc.jsonl  (+3 more)
(+199 files in other folders)
