[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blindspot-rl"
version = "0.1.0"
description = "BlindSpot-RL reward and diagnostics for rubric coverage."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
]

[project.optional-dependencies]
full = [
  "datasets>=2.18",
  "huggingface_hub>=0.23",
  "pandas>=2.0",
  "pyarrow>=14.0",
  "sentence-transformers>=2.6",
]
dev = [
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
